idf_component_register(SRCS "esp32_nat_router.c"
                            "http_server.c"
                            "../components/ssd1306_spi.c"
                            "../components/ssd1306_i2c.c"
                            "../components/ssd1306.c"
                    INCLUDE_DIRS ".")
